Главная. вернул фоновую зеленую картинку на десктопе.

--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -123,25 +123,25 @@
     min-height: 474px;
     margin-bottom: 80px;
 
-    // &::before {
-    //   content: "";
-    //   position: absolute;
-    //   // background-position: 0 0;
-    //   top: -222px;
-    //   left: 50%;
+    &::before {
+      content: "";
+      position: absolute;
+      top: -222px;
+      left: 50%;
 
-    //   width: 720px;
-    //   height: 696px;
+      width: 720px;
+      height: 696px;
 
-    //   background-color: $green;
-    //   background-image: url("../img/index-background-desktop@1x.jpg");
-    //   background-repeat: no-repeat;
+      background-color: $green;
+      background-image: url("../img/index-background-desktop@1x.jpg");
+      background-repeat: no-repeat;
+      background-position: 0 0;
 
-    //   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    //     background-image: url("../img/index-background-desktop@2x.jpg");
-    //     background-size: 720px auto;
-    //   }
-    // }
+      @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+        background-image: url("../img/index-background-desktop@2x.jpg");
+        background-size: 720px auto;
+      }
+    }
   }
 
   .programs__header-wrapper {
