Добавил стили для двух состояний кнопки-переключателя меню.

--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -15,7 +15,22 @@
   background-color: #ffffff;
   border: none;
   cursor: pointer;
+}
 
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 23px;
+  right: 20px;
+
+  width: 24px;
+  height: 2px;
+
+  background-color: #000000;
+  box-shadow: 0 8px 0 0 #000000, 0 16px 0 0 #000000;
+}
+
+.main-nav--opened .main-nav__toggle {
   &::after,
   &::before {
     content: "";
