--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -73,10 +73,20 @@
   }
 }
 
+@media (max-width: $mobile-width-only) {
+  .main-nav--closed .main-nav__list {
+    display: none;
+  }
+}
+
 @media (min-width: $tablet-width) {
   .main-nav {
     width: 440px;
     padding-top: 42px;
+  }
+
+  .main-nav__toggle {
+    display: none;
   }
 
   .main-nav__list {
