--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -14,6 +14,7 @@ $arial: "Arial", sans-serif;
 
 $tablet-width: 768px;
 $desktop-width: 1300px;
+$mobile-width-only: 767px;
 
 $retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
