--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -77,6 +77,10 @@
   .main-nav--closed .main-nav__list {
     display: none;
   }
+
+  .main-nav--no-js .main-nav__toggle {
+    display: none;
+  }
 }
 
 @media (min-width: $tablet-width) {
