--- a/source/sass/blocks/input-checkbox.scss
+++ b/source/sass/blocks/input-checkbox.scss
@@ -34,7 +34,7 @@
 }
 
 .input-checkbox__input:focus + label::before {
-  outline: thin dotted;
+  // outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
   // outline: rgb(59, 153, 252) auto 5px;
 }
