--- a/source/sass/blocks/table.scss
+++ b/source/sass/blocks/table.scss
@@ -1,14 +1,10 @@
 .table {
-  // width: 100%;
-  // width: 140px;
+  width: 100%;
+
   border-collapse: collapse;
   font-size: 12px;
   line-height: 16px;
   font-family: $arial;
-
-  // tbody {
-  //   width: 100%;
-  // }
 }
 
 .table tbody {
@@ -27,8 +23,6 @@
 
 @media (min-width: $tablet-width) {
   .table {
-    width: auto;
-
     font-size: 16px;
   }
 
