--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -8,7 +8,7 @@
 
 .catalog__title {
   margin: 0;
-  // padding-top: 15px;
+  margin-right: 20px;
   margin-bottom: 28px;
   margin-left: 20px;
 
@@ -16,8 +16,6 @@
   font-size: 36px;
   line-height: 60px;
   color: $black;
-
-  // border-bottom: 1px solid #ededed;
 }
 
 .catalog__list {
