--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -137,6 +137,7 @@
 .additional__offer-title {
   width: 170px;
   margin: 0 auto;
+  padding-bottom: 10px;
 
   font-size: 16px;
   line-height: 20px;
