--- a/source/sass/blocks/input-checkbox.scss
+++ b/source/sass/blocks/input-checkbox.scss
@@ -2,7 +2,7 @@
   margin-bottom: 24px;
 }
 
-.input-checkbox__input + label {
+.input-checkbox__input + .input-checkbox__label {
   position: relative;
 
   padding-left: 45px;
@@ -33,13 +33,13 @@
   }
 }
 
-.input-checkbox__input:focus + label::before {
+.input-checkbox__input:focus + .input-checkbox__label::before {
   // outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
   // outline: rgb(59, 153, 252) auto 5px;
 }
 
-.input-checkbox__input:checked + label {
+.input-checkbox__input:checked + .input-checkbox__label {
   &::after {
     content: "";
     position: absolute;
@@ -62,7 +62,7 @@
     margin-bottom: 52px;
   }
 
-  .input-checkbox__input + label {
+  .input-checkbox__input + .input-checkbox__label {
     padding-left: 55px;
 
     &::before {
@@ -71,7 +71,7 @@
     }
   }
 
-  .input-checkbox__input:checked + label {
+  .input-checkbox__input:checked + .input-checkbox__label {
     &::after {
       top: 8px;
       left: 10px;
