--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,9 +1,4 @@
 .page-header {
-  position: relative;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   width: 320px;
   margin: 0 auto;
 
@@ -12,6 +7,16 @@
   line-height: 20px;
   color: $black;
   text-transform: uppercase;
+}
+
+.header__container {
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 320px;
+  margin: 0 auto;
 }
 
 .page-header__logo {
@@ -24,8 +29,13 @@
 
 @media (min-width: $tablet-width) {
   .page-header {
+    width: 768px;
+  }
+
+  .header__container {
     flex-direction: row;
     width: 708px;
+    margin: 0 auto;
   }
 
   .page-header__logo {
@@ -43,7 +53,7 @@
     position: relative;
     z-index: 10;
 
-    width: 1220px;
+    width: 1300px;
 
     &--background {
       &::before {
@@ -53,10 +63,10 @@
         left: 50%;
         z-index: -10;
 
-        width: 720px;
+        width: 50%;
         height: 696px;
 
-        background-color: $green;
+        background-color: #64a83b;
         background-image: url("../img/index-background-desktop@1x.jpg");
         background-repeat: no-repeat;
         background-position: 0 0;
@@ -67,6 +77,10 @@
         }
       }
     }
+  }
+
+  .header__container {
+    width: 1220px;
   }
 
   .page-header__logo {
