Правки. Стайлгайд, состояние ошибки для input.

--- a/source/sass/blocks/input-text.scss
+++ b/source/sass/blocks/input-text.scss
@@ -39,6 +39,10 @@
   &--icon {
     padding-right: 40px;
   }
+
+  &:invalid {
+    border: solid 2px $border-invalid;
+  }
 }
 
 .input-text__icon {
